--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,28 +3,58 @@ name: Publish to PyPI
 on:
   release:
     types: [published]
+  workflow_dispatch:  # Allow manual triggering
+
+permissions:
+  contents: read
 
 jobs:
   publish:
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/faststrap
+    permissions:
+      id-token: write  # Required for trusted publishing
     
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-    
+          fetch-depth: 0  # Full history for hatch-vcs versioning
+      
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-    
-      - name: Install hatch
-        run: pip install hatch
-    
+      
+      - name: Install build tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install hatch
+      
+      - name: Verify version from git tag
+        run: |
+          VERSION=$(hatch version)
+          echo "Building version: $VERSION"
+          if [[ "$VERSION" == "0.0.0" ]]; then
+            echo "❌ Version detection failed"
+            exit 1
+          fi
+      
       - name: Build package
-        run: hatch build
-    
+        run: |
+          hatch build
+          ls -lh dist/
+      
+      - name: Verify wheel contents
+        run: |
+          pip install twine
+          twine check dist/*
+      
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          password: ${{ secrets.PYPI_API_TOKEN }}
+          # Trusted publishing (no API token needed)
+          # Configure at: https://pypi.org/manage/account/publishing/
+          print-hash: true
