--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,43 +1,68 @@
 name: Tests
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [main, develop]
+  pull_request:
+    branches: [main]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.10", "3.11", "3.12"]
     
     steps:
-      - uses: actions/checkout@v4
-    
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-    
+      
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
-    
+      
       - name: Run tests
-        run: |
-          pytest --cov=faststrap --cov-report=xml
-    
-      - name: Type checking
-        run: |
-          mypy src/faststrap
-    
-      - name: Linting
-        run: |
-          black --check src/faststrap tests
-          ruff check src/faststrap tests
-    
-      - name: Upload coverage to Codecov
+        run: pytest
+      
+      - name: Upload coverage
+        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.12'
         uses: codecov/codecov-action@v3
-        if: success()
         with:
-          file: ./coverage.xml
+          files: ./coverage.xml
           flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: false
+
+  lint:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install black ruff mypy
+          pip install -e .
+      
+      - name: Check formatting
+        run: black --check src/faststrap tests
+      
+      - name: Lint with ruff
+        run: ruff check src/faststrap tests
+      
+      - name: Type check
+        run: mypy src/faststrap
