--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,30 @@
 [build-system]
-requires = ["hatchling>=1.8.0", "hatch-vcs"]  # Critical fix: ensures editable installs work
+requires = ["hatchling>=1.8.0", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [project]
 name = "faststrap"
-dynamic = ["version"]  # Let git tags set version (best practice)
-description = "Modern Bootstrap 5 components for FastHTML - Beautiful UIs in pure Python"
+dynamic = ["version"]
+description = "Modern Bootstrap 5 components for FastHTML - Build beautiful UIs in pure Python"
 readme = "README.md"
 requires-python = ">=3.10"
 license = {text = "MIT"}
 authors = [
     {name = "Olorundare Micheal", email = "meshelleva@gmail.com"}
 ]
-keywords = ["fasthtml", "bootstrap", "ui", "components", "web", "htmx", "python"]
+keywords = [
+    "fasthtml",
+    "bootstrap",
+    "bootstrap5",
+    "ui-components",
+    "web-framework",
+    "htmx",
+    "python-web",
+    "no-javascript"
+]
 classifiers = [
     "Development Status :: 3 - Alpha",
-    "Framework :: FastAPI",                    # Valid + smart (FastHTML is FastAPI-inspired)
+    "Framework :: FastAPI",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
@@ -25,9 +34,10 @@ classifiers = [
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Software Development :: User Interfaces",
+    "Typing :: Typed",
 ]
 dependencies = [
-    "python-fasthtml>=0.6.0",  # Updated to latest stable
+    "python-fasthtml>=0.6.0",
 ]
 
 [project.optional-dependencies]
@@ -43,23 +53,53 @@ dev = [
 Homepage = "https://github.com/Evayoung/Faststrap"
 Repository = "https://github.com/Evayoung/Faststrap"
 Issues = "https://github.com/Evayoung/Faststrap/issues"
+Documentation = "https://github.com/Evayoung/Faststrap#readme"
+Changelog = "https://github.com/Evayoung/Faststrap/blob/main/CHANGELOG.md"
 
-# Dynamic version from git tags
+# ============================================================================
+# Build Configuration
+# ============================================================================
+
 [tool.hatch.version]
 source = "vcs"
 
-# Include static assets in wheel
 [tool.hatch.build.targets.wheel]
 packages = ["src/faststrap"]
-include = ["/static"]
+# Include static assets in the wheel
+artifacts = [
+    "static/**/*",
+]
 
 [tool.hatch.build.targets.sdist]
-include = ["/src", "/static"]
+include = [
+    "/src",
+    "/static",
+    "/tests",
+    "/examples",
+    "/*.md",
+    "/LICENSE",
+]
 
-# Tooling config (perfect as-is)
+# ============================================================================
+# Testing Configuration
+# ============================================================================
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-addopts = "--cov=faststrap --cov-report=html --cov-report=term-missing"
+addopts = [
+    "--cov=faststrap",
+    "--cov-report=html",
+    "--cov-report=term-missing",
+    "--cov-report=xml",
+    "-v",
+]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+
+# ============================================================================
+# Type Checking Configuration
+# ============================================================================
 
 [tool.mypy]
 python_version = "3.10"
@@ -67,25 +107,57 @@ warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 files = ["src/faststrap"]
+exclude = ["tests/", "examples/"]
 
-# IGNORE UNTYPED IMPORTS (FastHTML doesn't have py.typed)
+# FastHTML and Starlette don't have type stubs
 [[tool.mypy.overrides]]
 module = ["fasthtml.*", "starlette.*"]
 ignore_missing_imports = true
 
+# ============================================================================
+# Code Formatting Configuration
+# ============================================================================
+
 [tool.black]
 line-length = 100
-target-version = ['py310']
+target-version = ["py310", "py311", "py312"]
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+    \.git
+  | \.venv
+  | build
+  | dist
+)/
+'''
 
-# NEW (correct)
+# ============================================================================
+# Linting Configuration
+# ============================================================================
+
 [tool.ruff]
 line-length = 100
 target-version = "py310"
+src = ["src"]
 
 [tool.ruff.lint]
-select = ["E", "F", "I", "W", "UP"]  # Removed "N" (naming) since we use PascalCase for components
-ignore = ["E501"]  # Line length
+select = [
+    "E",   # pycodestyle errors
+    "F",   # pyflakes
+    "I",   # isort
+    "W",   # pycodestyle warnings
+    "UP",  # pyupgrade
+    "B",   # flake8-bugbear
+    "C4",  # flake8-comprehensions
+]
+ignore = [
+    "E501",  # Line too long (handled by black)
+]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]  # Unused imports OK in __init__
-"**/components/**/*.py" = ["N802"]  # Allow PascalCase function names (Button, Card, etc.)
+"**/components/**/*.py" = ["N802"]  # Allow PascalCase for components
+"tests/**/*.py" = ["S101"]  # Allow assert in tests
+
+[tool.ruff.lint.isort]
+known-first-party = ["faststrap"]
